# clothing-shop

./: .gitignore  docker-compose.yml
backend/: addcart2.json  chat.json  chat2.json  chat3.json  chat4.json  login.json  login2.json  pyproject.toml  requirements.txt
backend/app/: auth.py  checkout_service.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/agents/: shopping_assistant.py  test_connection.py
backend/app/routers/: agent.py  auth.py  cart.py  contact.py  orders.py  posts.py  products.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/api/: axios.js
frontend/src/components/: ChatWidget.jsx
frontend/src/context/: CartContext.jsx
frontend/src/pages/: Account.jsx  Careers.jsx  Cart.jsx  Contact.jsx  FAQ.jsx  JournalDetail.jsx  Login.jsx  New.jsx  OrderConfirmation.jsx  OrderHistory.jsx  OurStory.jsx  Press.jsx  ProductDetail.jsx  Register.jsx  Returns.jsx  Sale.jsx  Shipping.jsx  Shop.jsx  SizeGuide.jsx  Sustainability.jsx  journal.jsx
