[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiofile==3.11.1",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anthropic==0.117.0",
    "anyio==4.14.2",
    "argcomplete==3.7.0",
    "attrs==26.1.0",
    "authlib==1.7.2",
    "bcrypt==4.0.1",
    "beartype==0.22.9",
    "cachetools==7.1.4",
    "caio==0.9.25",
    "certifi==2026.6.17",
    "cffi==2.1.0",
    "charset-normalizer==3.4.9",
    "click==8.4.2",
    "colorama==0.4.6",
    "cryptography==49.0.0",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "docstring-parser==0.18.0",
    "ecdsa==0.19.2",
    "email-validator==2.3.0",
    "exceptiongroup==1.3.1",
    "executing==2.2.1",
    "fastapi==0.139.0",
    "fastmcp-slim==3.4.4",
    "genai-prices==0.0.71",
    "google-auth==2.55.2",
    "google-genai==2.12.1",
    "googleapis-common-protos==1.75.0",
    "greenlet==3.5.3",
    "griffelib==2.1.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpcore2==2.7.0",
    "httptools==0.8.0",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "httpx2==2.7.0",
    "idna==3.18",
    "jaraco-classes==3.4.0",
    "jaraco-context==6.1.2",
    "jaraco-functools==4.6.0",
    "jiter==0.16.0",
    "joserfc==1.7.3",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "keyring==25.7.0",
    "logfire==4.37.0",
    "logfire-api==4.37.0",
    "markdown-it-py==4.2.0",
    "mcp==1.28.1",
    "mdurl==0.1.2",
    "more-itertools==11.1.0",
    "openai==2.46.0",
    "opentelemetry-api==1.42.1",
    "opentelemetry-exporter-otlp-proto-common==1.42.1",
    "opentelemetry-exporter-otlp-proto-http==1.42.1",
    "opentelemetry-instrumentation==0.63b1",
    "opentelemetry-instrumentation-httpx==0.63b1",
    "opentelemetry-proto==1.42.1",
    "opentelemetry-sdk==1.42.1",
    "opentelemetry-semantic-conventions==0.63b1",
    "opentelemetry-util-http==0.63b1",
    "packaging==26.2",
    "passlib==1.7.4",
    "platformdirs==4.10.0",
    "prompt-toolkit==3.0.52",
    "protobuf==6.33.6",
    "psycopg2-binary==2.9.12",
    "py-key-value-aio==0.4.5",
    "pyasn1==0.6.4",
    "pyasn1-modules==0.4.2",
    "pycparser==3.0",
    "pydantic==2.13.4",
    "pydantic-ai==2.12.0",
    "pydantic-ai-slim==2.12.0",
    "pydantic-core==2.46.4",
    "pydantic-evals==2.12.0",
    "pydantic-graph==2.12.0",
    "pydantic-settings==2.14.2",
    "pygments==2.20.0",
    "pyjwt==2.13.0",
    "pyperclip==1.11.0",
    "python-dotenv==1.2.2",
    "python-jose==3.5.0",
    "python-multipart==0.0.32",
    "pywin32==312",
    "pywin32-ctypes==0.2.3",
    "pyyaml==6.0.3",
    "referencing==0.37.0",
    "regex==2026.7.10",
    "requests==2.34.2",
    "rich==15.0.0",
    "rpds-py==2026.6.3",
    "rsa==4.9.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.51",
    "sse-starlette==3.4.5",
    "starlette==1.3.1",
    "tenacity==9.1.4",
    "tiktoken==0.13.0",
    "tqdm==4.68.4",
    "truststore==0.10.4",
    "typing-extensions==4.16.0",
    "typing-inspection==0.4.2",
    "urllib3==2.7.0",
    "uvicorn==0.51.0",
    "watchfiles==1.2.0",
    "wcwidth==0.8.2",
    "websockets==16.1",
    "wrapt==2.2.2",
]
